# vul-detector

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  ISSUE_TEMPLATE.md  LICENSE  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci-cd.yml
backend/: .dockerignore  Dockerfile  build_tree_sitter.py  pytest.ini  requirements.txt  test_formats.py  test_tree_sitter_build.py
backend/app/: lol.py  main.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/data/: cwe_mappings.json
backend/app/models/: schemas.py
backend/app/services/: analyzer.py  cve_mapper.py  fix_generator.py  github_scanner.py  report_generator.py  static_analysis.py  tree_sitter_loader.py  vuln_rules.py
backend/tests/: test_analysis.py  test_api.py  test_fix_generator.py
frontend/: Dockerfile  nginx.conf
frontend/public/: index.html
frontend/src/: App.css  App.js  config.js
frontend/src/components/: CodeInput.css  CodeInput.js  RepoAnalyzer.css  RepoAnalyzer.js  ResultDisplay.css  ResultDisplay.js
